<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyekTMII</string>
    <string name="header_tmii">Header TMII</string>
    <string name="pintu_masuk">Pintu Masuk</string>
    <string name="parkir">Parkir</string>
    <string name="destinasi">Destinasi</string>
    <string name="kantin">Kantin</string>
    <string name="cek_saldo">Cek Saldo</string>
    <string name="pintu_masuk_icon">Ikon Pintu Masuk</string>
    <string name="parkir_icon">Ikon Parkir</string>
    <string name="destinasi_icon">Ikon Destinasi</string>
    <string name="kantin_icon">Ikon Kantin</string>
    <string name="cek_saldo_icon">Ikon Cek Saldo</string>
    <string name="tmii_logo_footer">Logo TMII Footer</string>
    <string name="app_name_full">Taman Mini Indonesia Indah</string>
    <string name="background_ombak">Background Ombak</string>
    <string name="back_button">Tombol Kembali</string>
    <string name="destination_menu_title">Destinasi</string>
    <string name="museum_icon">Ikon Museum</string>
    <string name="museum_title">Museum</string>
    <string name="wahana_icon">Ikon Wahana dan Rekreasi</string>
    <string name="wahana_title">Wahana &amp; Rekreasi</string>
    <string name="canteen_title">Kantin</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="default_total_price">Rp 0</string>
    <string name="bayar">Bayar</string>
    <string name="cart_title">Pembayaran Menu Kantin</string>
    <string name="total_item">Total Item</string>
    <string name="total_pembayaran">Total pembayaran</string>
    <string name="lanjut_bayar">Lanjutkan Pembayaran</string>
    <string name="cek_saldo_title">Cek Saldo</string>
    <string name="silahkan_tap_kartu">Silahkan Tap Kartu</string>
    <string name="nfc_icon">Ikon NFC</string>
    <string name="id_kartu">ID Kartu</string>
    <string name="saldo">Saldo</string>
    <string name="mobil_icon">Ikon Mobil</string>
    <string name="background_awan">Background Awan</string>
    <string name="pembayaran_parkir">Pembayaran Parkir</string>
    <string name="rincian_parkir">Rincian Parkir</string>
    <string name="waktu_masuk">Waktu Masuk:</string>
    <string name="waktu_keluar">Waktu Keluar:</string>
    <string name="kartu_icon">Ikon Kartu</string>
    <string name="sukses_title">SUKSES!</string>
    <string name="silahkan_keluar">Silahkan Keluar</string>
    <string name="default_sisa_saldo">Saldo Tersisa: Rp 0</string>
    <string name="silahkan_masuk">Silahkan Masuk</string>
    <string name="nfc_payment_instruction_format">Silakan tempelkan kartu untuk membayar Rp %d</string>
    <string name="selamat_menikmati">Selamat Menikmati</string>
    <string name="destination_selection_title">Pilih Destinasi</string>
    <string name="lanjut_ke_keranjang">Lanjut ke Keranjang</string>
    <string name="nfc_payment_instruction">Silakan tempelkan kartu untuk membayar</string>
    <string name="nfc_icon_desc">Ikon NFC</string>
    <string name="memproses_pembayaran">Memproses\nPembayaran...</string>
    <string name="tmii_logo_desc">Logo TMII</string>
    <string name="sukses_icon">Ikon Sukses</string>
    <string name="tmii_logo">Logo TMII</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="destination_title">Pilih Destinasi</string>
    <string name="total_tiket">Total Tiket</string>


</resources>